# rsp

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  build.yml  ci.yml  lint.yml  tests.yml  toc.yml
specs/: README.md
src/: cli.rs  error.rs  lib.rs  main.rs  peeler.rs
tests/: cli_tests.rs  edge_cases_tests.rs  peeler_tests.rs
tests/test_data/: sample_configmap.yaml
